<resources>
    <string name="app_name">FootStat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_account">Create Account</string>
    <string name="read_text_file">Read Text File</string>
    <string name="username_hint">Username</string>
    <string name="la_liga_title">LA LIGA</string>
    <string name="loss">LOSS</string>
    <string name="draw">DRAW</string>
    <string name="win">WIN</string>
    <string name="pos">POS</string>
    <string name="team">TEAM</string>

</resources>